packages/validator/tests/snapshots/snapshot_tests__nested_layout_dom.snap
---
source: packages/validator/tests/snapshot_tests.rs
assertion_line: 75
expression: html
---
<!DOCTYPE html>
<html lang="en" dir="ltr">
<head>
<meta charset="UTF-8">
<meta name="viewport" content="width=device-width, initial-scale=1.0">
<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' https: data:; frame-ancestors 'none'; base-uri 'self'; form-action 'self'">
<meta http-equiv="X-Content-Type-Options" content="nosniff">
<meta http-equiv="X-Frame-Options" content="DENY">
<meta name="referrer" content="strict-origin-when-cross-origin">
<title>Nested Layout</title>
<meta name="description" content="Nested container layout.">
<style>
:root{color-scheme:light dark;--voce-fg:#111;--voce-bg:#fff;--voce-muted-fg:#666;--voce-border:rgba(127,127,127,.25);--voce-surface:rgba(127,127,127,.04);--voce-primary:#6366f1;--voce-primary-hover:#818cf8;--voce-error:#ef4444;--voce-warning:#f59e0b;--voce-success:#10b981;--voce-shadow-sm:0 1px 2px rgba(0,0,0,.06),0 1px 3px rgba(0,0,0,.1);--voce-shadow-md:0 4px 6px rgba(0,0,0,.05),0 10px 15px rgba(0,0,0,.1)}
@media (prefers-color-scheme:dark){:root{--voce-fg:#e8e8ec;--voce-bg:#0a0a0c;--voce-muted-fg:#8b8b94;--voce-border:rgba(255,255,255,.12);--voce-surface:rgba(255,255,255,.04);--voce-shadow-sm:0 1px 2px rgba(0,0,0,.4),0 1px 3px rgba(0,0,0,.5);--voce-shadow-md:0 4px 6px rgba(0,0,0,.4),0 10px 15px rgba(0,0,0,.5)}}
*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;line-height:1.5;background:var(--voce-bg);color:var(--voce-fg)}
button:disabled,input:disabled,textarea:disabled,select:disabled,[aria-disabled="true"]{opacity:.55;cursor:not-allowed}
[aria-busy="true"]{cursor:progress}
img{max-width:100%;height:auto;display:block}
.skip-link{position:absolute;left:-9999px;top:0;z-index:1000;padding:8px 16px;background:var(--voce-bg);color:var(--voce-fg);border:2px solid var(--voce-primary)}
.skip-link:focus{left:8px;top:8px}
[id="main"]:focus{outline:none}
h1,h2,h3,h4,h5,h6{line-height:1.2;margin-bottom:.5em;text-wrap:balance}
h1{font-size:clamp(2rem,1.45rem+2.2vw,2.75rem);letter-spacing:-.02em}
h2{font-size:clamp(1.6rem,1.25rem+1.4vw,2.125rem);letter-spacing:-.01em}
h3{font-size:1.5rem}h4{font-size:1.25rem}h5{font-size:1.125rem}h6{font-size:1rem}
p{line-height:1.6;margin-bottom:1em;text-wrap:pretty;overflow-wrap:break-word}
p:last-child,li:last-child{margin-bottom:0}
::selection{background:var(--voce-primary);color:#fff}
@media(prefers-reduced-motion:no-preference){html{scroll-behavior:smooth}}
ul,ol{margin:0 0 1em 1.5em;padding-left:.5em}
li{line-height:1.6;margin-bottom:.25em}
code{font-family:ui-monospace,'SF Mono',Menlo,Consolas,monospace;font-size:.92em;background:var(--voce-surface);padding:.15em .35em;border-radius:4px}
pre{background:var(--voce-surface);border:1px solid var(--voce-border);border-radius:6px;padding:12px 14px;overflow-x:auto;margin:0 0 1em}
pre code{background:transparent;padding:0;border-radius:0;font-size:.95em}
blockquote{margin:0 0 1em;padding:.25em 1em;border-left:3px solid var(--voce-primary);color:var(--voce-muted-fg);font-style:italic}
hr{border:none;border-top:1px solid var(--voce-border);margin:1.5em 0}
table{border-collapse:collapse;width:100%;margin-bottom:1em}
th,td{padding:8px 12px;text-align:left;border-bottom:1px solid var(--voce-border)}
th{font-weight:600}
tbody tr:nth-child(even){background:var(--voce-surface)}
a{transition:opacity .15s}
a:hover{opacity:.8}
a:focus-visible{outline:2px solid var(--voce-primary,#6366f1);outline-offset:2px;border-radius:2px}
input,textarea,select{transition:border-color .15s,box-shadow .15s}
input:focus,textarea:focus,select:focus{outline:none;border-color:var(--voce-primary,#6366f1);box-shadow:0 0 0 3px rgba(99,102,241,.2)}
button,[role="button"]{cursor:pointer}
.voce-btn{cursor:pointer;transition:opacity .15s,transform .1s}
.voce-btn:hover{opacity:.9}
.voce-btn:active{transform:scale(.98)}
.voce-btn:focus-visible{outline:2px solid var(--voce-primary,#6366f1);outline-offset:2px;border-radius:2px}
form{display:flex;flex-direction:column;gap:14px;max-width:520px;width:100%}
form label{font-size:14px;font-weight:500;display:block}
input,textarea,select{font:inherit;color:inherit;background:rgba(127,127,127,.06);border:1px solid rgba(127,127,127,.25);border-radius:6px;padding:10px 12px;width:100%;min-height:44px}
textarea{min-height:120px;resize:vertical;font-family:inherit}
form button[type="submit"],form button:not([type]){font:inherit;font-weight:600;background:var(--voce-primary,#6366f1);color:#fff;border:none;border-radius:6px;padding:12px 20px;min-height:44px;align-self:flex-start;cursor:pointer;transition:opacity .15s,transform .1s}
form button[type="submit"]:hover,form button:not([type]):hover{opacity:.92}
form button[type="submit"]:active,form button:not([type]):active{transform:scale(.98)}
form button[type="submit"]:focus-visible,form button:not([type]):focus-visible{outline:2px solid var(--voce-primary,#6366f1);outline-offset:2px}
form [role="alert"]{font-size:13px;color:var(--voce-error,#ef4444)}
@media(max-width:520px){form{max-width:100%}form button[type="submit"],form button:not([type]){width:100%;align-self:stretch}}
</style>
</head>
<body>
  <div style="display:flex;flex-direction:column;">
    <div style="padding:16px 24px 16px 24px;display:flex;flex-direction:row;">
      <p style="font-size:1.25rem;font-weight:700;">Brand</p>
    </div>
    <div style="padding:40px 24px 40px 24px;display:flex;flex-direction:column;">
      <h1 style="font-size:clamp(1.35rem, calc(1.05rem + 1.5vw), 2.25rem);font-weight:700;">Welcome</h1>
      <p style="font-size:1rem;">This is the main content area.</p>
    </div>
  </div>
</body>
</html>
